--- a/app.html
+++ b/app.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
-        <script src="./src/index.js"></script>
+    <script src="./src/index.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>App [GoodPay]</title>
 </head>
@@ -71,8 +71,10 @@
                                                     aria-describedby="basic-addon1">
                                             </div>
                                             <div class="d-grid gap-2">
-                                                <button class="btn btn-outline-info" type="button">Entrar</button>
-                                                <button class="btn btn-outline-success" type="button">Cadastrar</button>
+                                                <button class="btn btn-outline-info" type="button"
+                                                    onclick="rotaLogin()">Entrar</button>
+                                                <button class="btn btn-outline-success" type="button"
+                                                    onclick="rotaCadastro()">Cadastrar</button>
                                             </div>
                                         </form>
                                     </div>
@@ -201,6 +203,7 @@
                         <p class="card-text">Com os planos de economia para sair no rolê, marque sua data de saida e só
                             guarde em seu cofre todos os meses se você for sorteado ganha 5x o que tiver em seu cofrinho
                             para dar aquele UP na suas férias.</p>
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#promo1">Leia mais...</button>
                         <p class="card-text"><small class="text-muted">Abril 19 de 2022</small></p>
                     </div>
                 </div>
@@ -211,6 +214,7 @@
                         <p class="card-text">Todos os planos do GoodPay com 50% de descontos só não tem desconto quem
                             não quer. Esta promoção é valida até dia 6 de janeiro de 2022 e somente para os planos que
                             não tem sorteios e capitalização premiada.</p>
+                        <button type="button" class="btn btn-outline-light">Leia mais...</button>
                         <p class="card-text"><small class="text-muted">Abril 19 de 2022</small></p>
                     </div>
                 </div>
@@ -221,12 +225,30 @@
                         <p class="card-text">Comece a economizar assim que seu filho nascer e concorra todo ano á
                             premios percentuais de seu porquinho e se seu beneficiado tirar nota superior à 800 no Mec
                             Enem ganhe 3x do seu porquinho na hora para turbinar o prêmio pelo esforço dele.</p>
+                        <button type="button" class="btn btn-outline-light">Leia mais...</button>
                         <p class="card-text"><small class="text-muted">Abril 19 de 2022</small></p>
                     </div>
                 </div>
             </div>
         </div>
     </main>
+    <!--Modal de Comunicação [Elementos não visíveis]-->
+    <div class="modal fade" id="promo1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Leia Mais</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Conteúdo....
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 <footer>
