Adição dos elementos Javascript com Bootstrap

--- a/app.html
+++ b/app.html
@@ -72,9 +72,9 @@
                                             </div>
                                             <div class="d-grid gap-2">
                                                 <button class="btn btn-outline-info" type="button"
-                                                    onclick="rotaLogin()">Entrar</button>
+                                                    onclick="rotaLogin()" data-bs-dismiss="offcanvas">Entrar</button>
                                                 <button class="btn btn-outline-success" type="button"
-                                                    onclick="rotaCadastro()">Cadastrar</button>
+                                                    onclick="rotaCadastro()" data-bs-dismiss="offcanvas">Cadastrar</button>
                                             </div>
                                         </form>
                                     </div>
@@ -242,6 +242,22 @@
                 </div>
                 <div class="modal-body">
                     Conteúdo....
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="loginNegado" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="loginNegado">Erro de Login</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Não foi possível executar o Login. Verifique suas Informações.
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
